--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,7 +36,7 @@ h4
     display: inline-block;
 
 }
-.boutons
+.buttons
 {
     display: inline-block;
     position: absolute;
@@ -80,7 +80,7 @@ h4
     width:70%;
     margin:auto;
 }
-.texte
+.text
 {
     margin: auto;
     width: 80%;
@@ -109,7 +109,7 @@ a
     text-decoration: none;
     color: blue;
 }
-.form_inscription, .form_connexion
+.form_inscription, .connection_form
 {
     padding: 2.5% 0% 2.5% 0%;
     display: flex;
@@ -119,7 +119,7 @@ a
     opacity: 0.5;
 
 }
-.p_inscription, .p_connexion
+.p_inscription, .connection_p
 {
     margin: auto;
     padding: 5%;
@@ -150,19 +150,19 @@ a
     background-color: rgb(27, 125, 223);
     color: black;
 }
-#aideEmail, #infoMdp, #infoMdp1, #infoMdp2, #aidePseudo
+#aideEmail, #connection_errors, #infoMdp1, #infoMdp2, #pseudo_help
 {
     position: absolute;
     left: 16%;
     color:red;
 }
-.form_commentaire
+.comment_form
 {
     width: 80%;
     margin: auto;
     vertical-align: bottom;
 }
-.commentaire
+.comment
 {
     display: inline-flex;
     vertical-align: bottom;
