--- a/public/css/style.css
+++ b/public/css/style.css
@@ -92,7 +92,7 @@ h4
 {
     padding-left: 3px;
 }
-#signaler, #deja_signaler, #supprimer
+#report
 {
     float: right;
     background-color: rgb(13, 13, 160);
