--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,25 +44,18 @@ h4
     right: 4px;
     vertical-align: top;
 }
-#admin
-{
-    width: auto;
-    border: 1px solid black;
-}
 #registration
 {
+    color:white;
+    padding: 7px 10px;
     background-color: orange;
-    width: 90px;
     border: 1px solid black;
 }
-#connection
+#admin, #connection, #disconnection
 {
-    width: 90px;
-    border: 1px solid black;
-}
-#disconnection
-{
-    width: 90px;
+    color: white;
+    padding: 7px 10px;
+    background-color: rgb(97, 95, 95);
     border: 1px solid black;
 }
 .news p
@@ -96,7 +89,11 @@ h4
 {
     float: right;
     background-color: rgb(13, 13, 160);
+    font-family: arial;
+    font-size: 13px;
+    padding: 3px 9px;
     color: white;
+    cursor: default;
     text-align: center;
     margin-right: 10px;
 }
