--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,23 @@
 body
 {
     width: auto;
+    background-image: url("../images/alaska.jpg");
+    background-attachment:fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
-h1, h3
+#name
 {
-    text-align:center;
+    position: fixed;
+    font-size: 30px;
+    top: 29px;
+    left: 20px; 
+}
+h1
+{
+    text-align: center;
+    border: 1px solid grey;
+    background-color: grey;
 }
 h2
 {
@@ -13,9 +26,7 @@ h2
 }
 h3
 {
-    background-color:black;
-    color:white;
-    font-size:0.9em;
+    text-align: center;
     margin-bottom:0px;
 }
 h4
@@ -23,65 +34,47 @@ h4
     width: 15%;
     text-align: center;
 }
-.nbpagesup
-{
-    display: inline-block;
-    position: absolute;
-    top: 80px;
-    vertical-align: top;
-    margin-bottom: 30px;
-}
-.nbpagesdown
-{
-    display: inline-block;
-
-}
 .buttons
 {
-    display: inline-block;
-    position: absolute;
-    top: 80px;
-    right: 4px;
     vertical-align: top;
+    position: fixed;
+    top: 35px;
+    right: 20px;
 }
 #registration
 {
     color:white;
-    padding: 7px 10px;
+    padding: 0px 10px;
     background-color: orange;
     border: 1px solid black;
 }
 #admin, #connection, #disconnection
 {
     color: white;
-    padding: 7px 10px;
+    padding: 0px 10px;
     background-color: rgb(97, 95, 95);
     border: 1px solid black;
 }
-.news p
-{
-    width: auto;
-    background-color:#CCCCCC;
-    margin-top:0px;
-}
 .news
 {
-    width:70%;
-    margin:auto;
+    width: 70%;
+    margin: auto;
+    padding: 15px;
+    background-color: rgb(255, 255, 255, 0.3);
 }
-.text
+.comment
 {
     margin: auto;
     width: 80%;
     padding-bottom: 5px;
-    background-color:#CCCCCC;
+    background-color:#CCCCCC60;
 }
-.text :nth-child(odd)
+.comment :nth-child(odd)
 {
     background-color:rgb(97, 95, 95);
     color: white;
 }
-.text p
+.comment p
 {
     padding-left: 3px;
 }
@@ -149,13 +142,13 @@ a
     left: 16%;
     color:red;
 }
-.comment_form
+.postCommentForm
 {
     width: 80%;
     margin: auto;
     vertical-align: bottom;
 }
-.comment
+.postComment
 {
     display: inline-flex;
     vertical-align: bottom;
