--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,23 +1,35 @@
 body
 {
     width: auto;
+    height: 100%;
     background-image: url("../images/alaska.jpg");
     background-attachment:fixed;
     background-size: cover;
     background-repeat: no-repeat;
 }
+body header
+{
+
+    width: 100%;
+    height: 45px;
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    background-color: grey;
+}
 #name
 {
     position: fixed;
     font-size: 30px;
-    top: 29px;
+    top: 5px;
     left: 20px; 
 }
 h1
 {
-    text-align: center;
-    border: 1px solid grey;
-    background-color: grey;
+    position: fixed;
+    left: 50%;
+    transform: translateX(-50%);
+    top: -21px;
 }
 h2
 {
@@ -33,12 +45,13 @@ h4
 {
     width: 15%;
     text-align: center;
+    padding-top: 40px;
 }
 .buttons
 {
     vertical-align: top;
     position: fixed;
-    top: 35px;
+    top: 12px;
     right: 20px;
 }
 #registration
@@ -55,7 +68,7 @@ h4
     background-color: rgb(97, 95, 95);
     border: 1px solid black;
 }
-.news
+.posts
 {
     width: 70%;
     margin: auto;
@@ -95,54 +108,52 @@ a
     text-decoration: none;
     color: blue;
 }
-.registration_form, .connection_form
+.registrationForm, .connectionForm
 {
-    padding: 2.5% 0% 2.5% 0%;
-    display: flex;
-    width: 15%;
+    padding: 2.5% 0%;
+    position: fixed;
+    top: 15%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 25%;
     background-color: dimgray;
     border-radius: 30px;
-    opacity: 0.5;
-
+    opacity: 0.8;
 }
-.registration_p, .connection_p
+.registrationForm p, .connectionForm p
 {
+    width: 75%;
     margin: auto;
     padding: 5%;
-    background-color: white;
-}
-.title
-{
+    background-color: rgba(255, 255, 255, 0.904);
     text-align: center;
-    margin-bottom: 15%;
 }
 .label
 {
-    width: auto;
-    display: block;
-    margin: 5% 0% 0% 0%;
-    text-align: left;
-}
-.email
-{
-    margin-bottom: 5%;
-}
-.submit_form
-{
     width: 100%;
     display: block;
-    margin: auto;
+    margin-top: 10px;
+    text-align: left;
+    padding-left: 1%;
+}
+.input
+{
+    width: 98%;
+}
+.submitForm
+{
+    width: 102%;
+    margin-top: 13px;
     font-weight: bold;
     background-color: rgb(27, 125, 223);
     color: black;
 }
 #email_help, #connection_errors, #password1_error, #password2_error, #pseudo_help
 {
-    position: absolute;
-    left: 16%;
+
     color:red;
 }
-.postCommentForm
+.commentForm
 {
     width: 80%;
     margin: auto;
@@ -153,4 +164,18 @@ a
     display: inline-flex;
     vertical-align: bottom;
     margin-top: 15px;
+}
+body footer
+{
+    width: 100%;
+    display: flex;
+    position: fixed;
+    left: 0px;
+    bottom: 0px;
+    background-image: none;
+    background-repeat: repeat;
+    background-attachment: scroll;
+    justify-content: space-around;
+    background-color: grey;
+    padding-top: 15px;
 }
