--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,12 @@
+html
+{
+    height: 100%;
+}
 body
 {
     width: auto;
-    height: 100%;
+    min-height: 95%;
+    position: relative;
     background-image: url("../images/alaska.jpg");
     background-attachment:fixed;
     background-size: cover;
@@ -45,7 +50,6 @@ h4
 {
     width: 15%;
     text-align: center;
-    padding-top: 40px;
 }
 .buttons
 {
@@ -67,6 +71,11 @@ h4
     padding: 0px 10px;
     background-color: rgb(97, 95, 95);
     border: 1px solid black;
+}
+.content
+{
+    padding-top: 30px;
+    padding-bottom: 130px;
 }
 .posts
 {
@@ -169,12 +178,9 @@ body footer
 {
     width: 100%;
     display: flex;
-    position: fixed;
+    position: absolute;
     left: 0px;
     bottom: 0px;
-    background-image: none;
-    background-repeat: repeat;
-    background-attachment: scroll;
     justify-content: space-around;
     background-color: grey;
     padding-top: 15px;
