--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,7 +36,7 @@ body header
     position: fixed;
     top: 10px;
     left: 240px; 
-    background-image: url("../images/test.png");
+    background-image: url("../images/home.png");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
