--- a/public/css/style.css
+++ b/public/css/style.css
@@ -213,6 +213,10 @@ body footer
     background-color: #808080bb;
     padding-top: 15px;
 }
+li
+{
+    list-style-type: none;
+}
 
 /*------TABLETTE------*/
 @media (min-width: 769px) and (max-width: 1024px) 
@@ -252,6 +256,7 @@ body footer
     }
 }
 
+/*------INTERMEDIARE------*/
 @media (min-width: 501px) and (max-width: 768px)
 {
     body header
@@ -306,6 +311,19 @@ body footer
         margin: auto;
         width: 100%;
     }
+    nav
+    {
+        width: 200px;
+    }
+    #copyright
+    {
+        padding-top: 30px;
+        text-align: center;
+    }
+    ul
+    {
+        text-align: left;
+    }
 }
 
 /*------MOBILE------*/
@@ -317,6 +335,7 @@ body footer
         display: flex;
         flex-direction: column;
         align-items: center;
+        height: 80px;
     }
     #name 
     {
@@ -328,11 +347,15 @@ body footer
     }
     #home
     {
-        left: 90px;
+        top: 45px;
+        left: 10px;
     }
     h1
     {
-        display: none;
+        width: 100%;
+        text-align: center;
+        top: 40px;
+        font-size: 18px;
     }
     .buttons
     {
@@ -357,6 +380,7 @@ body footer
     }
     .content
     {
+        padding-top: 70px;
         padding-bottom: 180px;
     }
     .registrationForm, .connectionForm
@@ -375,5 +399,9 @@ body footer
         padding-top: 0;
         margin: auto;
         width: 100%;
+    }
+    ul
+    {
+        text-align: left;
     }
 }
