--- a/public/css/style.css
+++ b/public/css/style.css
@@ -103,6 +103,10 @@ h4
     padding: 15px;
     background-color: rgb(255, 255, 255, 0.3);
 }
+.posts p, .posts span
+{
+    background-color: rgb(255, 255, 255, 0) !important;
+}
 .comment
 {
     margin: auto;
